corrected online sass color correction with alpha and overflow ellipsis for chat items

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,32 +3,44 @@
 @import url("https://cdn.jsdelivr.net/npm/@xz/fonts@1/serve/cascadia-code.min.css");
 .toast-container {
   position: fixed;
-  top: 5.3125rem;
+  top: 1.25rem;
   right: 1.25rem;
   z-index: 9999;
-  background-color: rgba(255, 255, 255, 0) !important;
-  height: auto !important;
-  text-align: inherit !important;
-}
-
-.toast-message {
-  background-color: #333;
-  color: #fff;
-  padding: 1rem;
+  text-align: inherit;
+  max-width: calc(100vw - 2.35rem);
+  display: grid;
+  grid-gap: 0.4rem;
+  grid-template-columns: auto auto;
+  align-items: center;
+  background-color: rgba(51, 51, 51, 0.8) !important;
+  color: #ffffff;
+  padding: 0.7rem;
   border-radius: 0.25rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  text-align: left;
+}
+.toast-container span {
+  line-height: 1.2;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.toast-container .toast-message {
+  grid-column: 2 span;
+}
+.toast-container .toast-message.span1 {
+  grid-column: 1;
 }
 
 .toast-close {
-  background: none;
-  border: none;
-  color: #fff;
-  font-size: 20px;
+  justify-self: flex-end;
+  line-height: 0.5;
+  flex: 0 0 auto;
+  opacity: 0.3;
   cursor: pointer;
+}
+
+.toast-close:hover {
+  opacity: 1;
 }
 
 .login-page {
@@ -242,10 +254,12 @@ body {
   flex: 1 1 auto;
   min-height: 0;
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 .chat-item {
-  padding: 0.5rem;
+  margin: 0 0.5rem;
 }
 .chat-item:hover {
   background-color: #7e7e7e;
@@ -256,22 +270,32 @@ body {
   -moz-appearance: none;
   appearance: none;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
+  align-items: center;
 }
 .chat-item a:hover, .chat-item a:active, .chat-item a:link, .chat-item a:visited {
   color: black;
   cursor: default;
 }
-.chat-item a > * {
+.chat-item a img, .chat-item a span {
   margin: 0;
   display: inline-block;
-  vertical-align: middle;
   padding: 0.25rem;
 }
-.chat-item .chat-item__icon {
-  width: 40px;
+.chat-item a span {
+  max-width: 85%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
-.chat-item .chat-item__icon.online {
+.chat-item a .chat-item__icon {
+  width: 40px;
+  height: 40px;
+  object-fit: cover;
+  object-position: center;
+  flex: 0 0 auto;
+}
+.chat-item a .chat-item__icon.online {
   filter: drop-shadow(0 0 0.75rem rgba(88, 254, 58, 0.8));
 }
 
@@ -584,7 +608,7 @@ body {
   padding: 0.25rem;
 }
 .new-chat__contacts > a.online {
-  background-color: rgba(88, 254, 58, 0.8);
+  background-color: rgba(88, 254, 58, 0.2);
 }
 
 .blocked-contacts__form {
